# waspc

./: README.md  dune-project  owic.opam  owic.opam.template  waspc.opam
examples/: example00.c  example01.c  example02_main.c  example02_test.c  extern_func.c
examples/memory-safety/: double_free.c  memory_leak.c  overflow.c  use_after_free.c
examples/memory-safety/double_free/: a.out.wat
examples/memory-safety/double_free/test-suite/: metadata.xml
examples/memory-safety/memory_leak/: a.out.wat
examples/memory-safety/memory_leak/test-suite/: metadata.xml  testcase-1.xml
examples/memory-safety/overflow/: a.out.wat
examples/memory-safety/overflow/test-suite/: metadata.xml  testcase-1.xml  testcase-2.xml  testcase-3.xml  testcase-4.xml  testcase-5.xml  testcase-6.xml  testcase-7.xml  testcase-8.xml
examples/memory-safety/use_after_free/: a.out.wat
examples/memory-safety/use_after_free/test-suite/: metadata.xml  testcase-1.xml
share/: dune  share.ml  share.mli
share/lib/: Makefile
share/lib/include/: wasp.h
share/lib/src/: assert.c  memcmp.c  owi.c  stdlib.c  test-comp.c  wasp.c
share/libc/: Makefile  wasp.c  wasp.h
src/: dune  instrumentor.ml  main.ml  run.ml
test/: dune
