(library
 (name share)
 (modules share share_site)
 (libraries dune-site))

(generate_sites_module
 (module share_site)
 (sites owic))

(install
 (package owic)
 (section
  (site (owic py)))
 (files
  (py/instrumentor.py as instrumentor.py)))

(rule
 (deps (source_tree lib))
 (targets (dir bin))
 (action
  (progn
    (run mkdir -p bin)
    (run make -C lib))))

(install
 (package owic)
 (section
  (site (owic bin)))
 (files
  (bin/libc.wasm as libc.wasm)))

(install
 (package owic)
 (section
  (site (owic lib)))
 (files
  (lib/include/netinet/in.h as netinet/in.h)
  (lib/include/sys/cdefs.h as sys/cdefs.h)
  (lib/include/sys/param.h as sys/param.h)
  (lib/include/sys/resource.h as sys/resource.h)
  (lib/include/sys/time.h as sys/time.h)
  (lib/include/sys/types.h as sys/types.h)
  (lib/include/alloca.h as alloca.h)
  (lib/include/assert.h as assert.h)
  (lib/include/ctype.h as ctype.h)
  (lib/include/endian.h as endian.h)
  (lib/include/errno.h as errno.h)
  (lib/include/fcntl.h as fcntl.h)
  (lib/include/inttypes.h as inttypes.h)
  (lib/include/limits.h as limits.h)
  (lib/include/math.h as math.h)
  (lib/include/pthread.h as pthread.h)
  (lib/include/sched.h as sched.h)
  (lib/include/setjmp.h as setjmp.h)
  (lib/include/signal.h as signal.h)
  (lib/include/stdarg-cruft.h as stdarg-cruft.h)
  (lib/include/stdarg.h as stdarg.h)
  (lib/include/stdbool.h as stdbool.h)
  (lib/include/stddef.h as stddef.h)
  (lib/include/stdint.h as stdint.h)
  (lib/include/stdio.h as stdio.h)
  (lib/include/stdlib.h as stdlib.h)
  (lib/include/string.h as string.h)
  (lib/include/time.h as time.h)
  (lib/include/unistd.h as unistd.h)
  (lib/include/owi.h as owi.h)))
